Add angular CLI to dev dependencies

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "^1.2.3",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/compiler-cli": "^4.0.0",
@@ -33,7 +34,7 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0",
+    "@angular/cli": "1.2.3",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
