--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,11 @@
 language: node_js
+
+cache:
+  directories:
+    - "node_modules"
+
+env:
+  - TEST_SUITE=unit
+  - TEST_SUITE=acceptance
+
+script: "npm $TEST_SUITE"
