--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "zone.js": "0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.2.3",
     "@types/jasmine": "2.5.53",
     "@types/node": "7.0.29",
     "codelyzer": "3.1.2",
@@ -54,7 +53,6 @@
     "karma-coverage-istanbul-reporter": "1.3.0",
     "protractor": "5.1.2",
     "ts-node": "3.2.1",
-    "tslint": "5.5.0",
-    "typescript": "2.4.2"
+    "tslint": "5.5.0"
   }
 }
