--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,11 @@ cache:
 env:
   - TEST_SUITE=unit
   - TEST_SUITE=acceptance
-  - PHANTOMJS_BIN=/usr/local/phantomjs/bin/phantomjs
+
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 
 script: "case $TEST_SUITE in 'unit') npm test ;; 'acceptance') ng e2e ;; esac"
 
